--- a/Lulu02_MS1_Products/src/main/resources/application.properties
+++ b/Lulu02_MS1_Products/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9090
 spring.datasource.username=root
-spring.datasource.password=Mojojojo123???
+spring.datasource.password=Vyshnavimr@9
 spring.datasource.url=jdbc:mysql://localhost:3306/miniproject
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
